--- a/manifest.json
+++ b/manifest.json
@@ -5,20 +5,23 @@
     {
       "src": "image/ic_launcher.png",
       "sizes": "96x96",
-      "type": "image/png"
+      "type": "image/png",
+      "density": 2.0
     },
     {
       "src": "image/ic_android_black_48dp.png",
       "sizes": "144x144",
-      "type": "image/png"
+      "type": "image/png",
+      "density": 3.0
     },
     {
       "src": "image/ic_important_devices_white_48dp.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "density": 4.0
     }
   ],
-  "start_url": "/index.html",
+  "start_url": "index.html",
   "display": "standalone",
   "orientation": "landscape"
 }
