--- a/manifest.json
+++ b/manifest.json
@@ -23,5 +23,6 @@
   ],
   "start_url": "index.html",
   "display": "standalone",
-  "orientation": "landscape"
+  "orientation": "landscape",
+  "background_color": "#ff0000"
 }
